[project]
name = "algo-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lasse-cs" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "typer>=0.24.1",
]

[project.scripts]
algo-cli = "algo_cli.main:app"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
